- Fixed responsiveness for header - Updated deployment steps in the README - Fixed horizontal scrollbar

--- a/public/stylesheets/header/headerView.less
+++ b/public/stylesheets/header/headerView.less
@@ -1,6 +1,7 @@
 .headerView {
   background-color: @background-header;
   color: @text-color-header;
+  display: flex;
   font-size: @font-size-header;
   padding: 0 @padding-normal;
   width: calc(~"100% - " @padding-normal*2);
@@ -12,10 +13,12 @@
   .logo {
     display: flex;
     flex-direction: column;
-    font-size: 30px;
+    flex-basis: 215px;
+    flex-grow: 0;
+    flex-shrink: 0;
     justify-content: center;
     padding-left: @padding-normal;
-    padding-right: 30px;
+    padding-right: @padding-normal;
 
     img {
       height: 70px;
