--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -7,6 +7,7 @@ body {
   color: @text-color-body;
   font: @font-size-text "Lucida Grande", Helvetica, Arial, sans-serif;
   margin: 0;
+  overflow-x: hidden;
   overflow-y: scroll;
 }
 
